feat: 사다리 결과 출력 구현
Co-Authored-By: lemone <55480011+JiHyeonL@users.noreply.github.com>